--- a/css/main.css
+++ b/css/main.css
@@ -22,10 +22,10 @@
 .nav-color {
   background-color: #eaddb3;
 }
-.nav-color .container-fluid .logo {
+.nav-color .container-fluid a .logo {
   height: 80px;
 }
-.nav-color .container-fluid .logo:hover {
+.nav-color .container-fluid a .logo:hover {
   transform: scale(1.2);
   transition: 1s;
 }
@@ -311,6 +311,120 @@
 .contacto .contacto__box .contacto__mapa .mapa {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 991px) {
+  .navbar-light .navbar-toggler {
+    border: 1px solid #7c2806;
+  }
+  .navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28124, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+  .nav-link {
+    text-align: center;
+  }
+  .producto__container {
+    flex-wrap: wrap;
+  }
+  .cursos__list {
+    padding: 0;
+  }
+  .footer__libro {
+    width: 16em;
+    padding: 0 0 1em 0;
+  }
+}
+@media (max-width: 850px) {
+  .hero {
+    padding: 4em;
+  }
+  .historia {
+    flex-wrap: wrap;
+  }
+  .historia .historia__text {
+    margin-bottom: 0;
+  }
+  .cursos__container {
+    flex-direction: column;
+  }
+  .cursos__container .cursos__left {
+    width: 100%;
+  }
+  .cursos__container .cursos__left .cursos__list {
+    display: flex;
+    justify-content: space-around;
+    margin: 0;
+  }
+  .cursos__container .cursos__right {
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+  }
+  .cursos__container .cursos__right .cursos_division {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .cursos__container .cursos__right .cursos__image {
+    width: 100%;
+  }
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+  }
+  .footer .box {
+    padding: 0;
+  }
+  .footer .box .footer__list {
+    padding: 0;
+    text-align: center;
+  }
+  .footer .box .footer__list .footer__list--link {
+    text-align: center;
+  }
+  .footer .box .list .list__icon {
+    margin: 1em 0.5em 0 0.5em;
+  }
+  .footer .footer__center .footer__list .footer__list--item .footer__list--link .footer__libro {
+    width: 16em;
+    padding: 0 0 1em 0;
+  }
+}
+@media (max-width: 575px) {
+  .historia__text {
+    padding: 0 10px 0 10px;
+  }
+  .cursos__list {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cursos__list .cursos__item {
+    font-size: 1rem;
+  }
+  .cursos__list hr {
+    display: none;
+  }
+  .cursos__title {
+    font-size: 0.9rem;
+  }
+}
+@media (max-width: 412px) {
+  .navbar .container-fluid .navbar-brand {
+    margin: 0;
+  }
+  .navbar .container-fluid .navbar-brand .logo {
+    height: 60px;
+  }
+  .cursos__container .cursos__right {
+    grid-template-columns: 1fr;
+  }
+  .cursos__container .cursos__right .cursos_division {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .box .list .list__icon {
+    width: 2.5em;
+    height: 2.5em;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
